deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfe-front
  namespace: pfe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pfe-front
  template:
    metadata:
      labels:
        app: pfe-front
    spec:
      containers:
        - name: pfe-front
          image: default-route-openshift-image-registry.apps-crc.testing/pfe/pfe-front:latest
          ports:
            - containerPort: 3000  # Exposing port 3000
      imagePullSecrets:
        - name: registry-auth  # Reference to the pull secret created in Jenkins pipeline
